welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:2: error: missing arguments for method direm in class maxMod5;
follow this method with `_' if you want to treat it as a partially applied function
	if(direm){
           ^